@@ -349,12 +349,26 @@ namespace VehicleSelector
                         transfers[0].Reason = TransferManager.TransferReason.Taxi;
                         return 1;
                     }
-                    else if (buildingInfo.m_class.m_subService == ItemClass.SubService.PublicTransportTrain && buildingInfo.m_class.m_level == ItemClass.Level.Level4)
+                    else if (buildingInfo.m_class.m_subService == ItemClass.SubService.PublicTransportTrain)
                     {
-                        // Cargo train terminals.
-                        transfers[0].Title = Translations.Translate("CARGO_TRAIN");
-                        transfers[0].Reason = TransferManager.TransferReason.None;
-                        return 1;
+                        if (buildingInfo.m_class.m_level == ItemClass.Level.Level1)
+                        {
+                            // Intercity passenger trains.
+                            transfers[0].Title = Translations.Translate("TRAIN_PASSENGER");
+                            transfers[0].Reason = TransferManager.TransferReason.None;
+                            return 1;
+                        }
+
+                        if (buildingInfo.m_class.m_level == ItemClass.Level.Level4)
+                        {
+                            // Cargo train terminals.
+                            transfers[0].Title = Translations.Translate("TRAIN_CARGO");
+                            transfers[0].Reason = TransferManager.TransferReason.None;
+                            return 1;
+                        }
+
+                        // Unsupported train type.
+                        return 0;
                     }
                     else if (buildingInfo.m_buildingAI is AirportGateAI)
                     {
