@@ -1,4 +1,5 @@
-﻿- Add support for cable cars
+﻿- Add support for intercity trains
+- Add support for cable cars
 
 Version 1.1 -
 
